src/objects/OrderApi__Price_Rule__c.object
<CustomObject>
    <description>Flexible price rules allow you to configure custom price scenarios for items based on a variety of different rules.</description>
    <fields>
        <fullName>EventApi__Is_Early_Bird_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, denotes this price rule as the early bird price.</description>
        <inlineHelpText>When checked, denotes this price rule as the early bird price.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_On_Site_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, denotes this price rule as the on site price.</description>
        <inlineHelpText>When checked, denotes this price rule as the on site price.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Schedule_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Schedule Item.</description>
        <inlineHelpText>Link to related Schedule Item.</inlineHelpText>
        <label>Schedule Item</label>
        <referenceTo>EventApi__Schedule_Item__c</referenceTo>
        <relationshipLabel>Price Rules</relationshipLabel>
        <relationshipName>Price_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Ticket Type.</description>
        <inlineHelpText>Link to related Ticket Type.</inlineHelpText>
        <label>Ticket Type</label>
        <referenceTo>EventApi__Ticket_Type__c</referenceTo>
        <relationshipLabel>Price Rules</relationshipLabel>
        <relationshipName>Price_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Current_Num_Available__c</fullName>
        <description>A running total of the number of times this rule can be used prior to the rule expiring (if applicable).</description>
        <formula>IF(OrderApi__Max_Num_Available__c &gt; 0 &amp;&amp; (OrderApi__Max_Num_Available__c - OrderApi__Num_Times_Used__c &gt;= 0), OrderApi__Max_Num_Available__c - OrderApi__Num_Times_Used__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A running total of the number of times this rule can be used prior to the rule expiring (if applicable).</inlineHelpText>
        <label>Current Num Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__End_Date__c</fullName>
        <description>If a pricing rule is date-driven what date does this rule expire and become an inactive price for the product?</description>
        <inlineHelpText>If a pricing rule is date-driven what date does this rule expire and become an inactive price for the product?</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked the Price Rule is considered available for assignment and is considered when auto-calculating the appropriate price for a Item on Invoices, Sales Orders, Receipts, and EPayments. Defaults checked.</description>
        <inlineHelpText>When checked the Price Rule is considered available for assignment and is considered when auto-calculating the appropriate price for a Item on Invoices, Sales Orders, Receipts, and EPayments. Defaults checked.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All products must have one and only one default price assigned. This is used as the catch all when calculating the appropriate price to charge customers when purchasing the product.</description>
        <inlineHelpText>All products must have one and only one default price assigned. This is used as the catch all when calculating the appropriate price to charge customers when purchasing the product.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Promotional_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By checking this field this price will be shown in the eStore as the promotional price with the price rule name.</description>
        <inlineHelpText>By checking this field this price will be shown in the eStore as the promotional price with the price rule name.</inlineHelpText>
        <label>Is Promotional Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Item Class -- only valid if the Price Rule is not linked to a Item. When linked to a Item Class the Price Rule will automatically be created for all Items created as a child of the Item Class.</description>
        <inlineHelpText>Link to the Item Class -- only valid if the Price Rule is not linked to a Item. When linked to a Item Class the Price Rule will automatically be created for all Items created as a child of the Item Class.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Default Price Rules</relationshipLabel>
        <relationshipName>Price_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The item the price rule record is assigning a price for.</description>
        <inlineHelpText>The item the price rule record is assigning a price for.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Pricing Rules</relationshipLabel>
        <relationshipName>Price_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Limit_Per_Account__c</fullName>
        <description>Limits the total number of times the price rule can be used by the account or any contacts on the account.</description>
        <inlineHelpText>Limits the total number of times the price rule can be used by the account or any contacts on the account.</inlineHelpText>
        <label>Limit Per Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Limit_Per_Contact__c</fullName>
        <description>Limits the number of times the price rule can be used by each contact.</description>
        <inlineHelpText>Limits the number of times the price rule can be used by each contact.</inlineHelpText>
        <label>Limit Per Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Max_Assignments__c</fullName>
        <description>Enter the maximum quantity that can be assigned for this rule to apply to a purchase of the item. Leave blank to not constrain rule by maximum assignments.</description>
        <inlineHelpText>Enter the maximum quantity that can be assigned for this rule to apply to a purchase of the item. Leave blank to not constrain rule by maximum assignments.</inlineHelpText>
        <label>Max Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Max_Num_Available__c</fullName>
        <description>The maximum number of times this rule can be used. Typically used to incentivize customers to purchase products early or for flash/date-driven sales. Leave blank if you do not want to limit the number of times the rule can be applied.</description>
        <inlineHelpText>The maximum number of times this rule can be used. Typically used to incentivize customers to purchase products early or for flash/date-driven sales. Leave blank if you do not want to limit the number of times the rule can be applied.</inlineHelpText>
        <label>Max Num Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Max_Quantity__c</fullName>
        <description>Enter the maximum quantity that can not be exceeded for this rule to apply to be valid for any given transaction scenario. Leave blank to disable max quantity as a constraint for the rule.</description>
        <inlineHelpText>Enter the maximum quantity that can not be exceeded for this rule to apply to be valid for any given transaction scenario. Leave blank to disable max quantity as a constraint for the rule.</inlineHelpText>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Min_Assignments__c</fullName>
        <description>Enter the minimum quantity that must be assigned for this rule to apply to a purchase of the item. Leave blank to not constrain rule by minimum assignments.</description>
        <inlineHelpText>Enter the minimum quantity that must be assigned for this rule to apply to a purchase of the item. Leave blank to not constrain rule by minimum assignments.</inlineHelpText>
        <label>Min Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Min_Quantity__c</fullName>
        <description>Enter the minimum quantity that must be purchased for this rule to apply to a purchase of the item. Leave blank to not constrain rule assignement by minimum quantity.</description>
        <inlineHelpText>Enter the minimum quantity that must be purchased for this rule to apply to a purchase of the item. Leave blank to not constrain rule assignement by minimum quantity.</inlineHelpText>
        <label>Min Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Num_Times_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of times this rule has been applied as the price rule for the product on a transaction.</description>
        <inlineHelpText>The number of times this rule has been applied as the price rule for the product on a transaction.</inlineHelpText>
        <label>Num Times Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price__c</fullName>
        <description>Enter the price for the pricing rule.</description>
        <inlineHelpText>Enter the price for the pricing rule.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Required_Badge_Types__c</fullName>
        <description>Comma separated list of Badge Types required to be considered eligible for the Price Rule.</description>
        <inlineHelpText>Comma separated list of Badge Types required to be considered eligible for the Price Rule.</inlineHelpText>
        <label>Required Badge Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Required_Source_Codes__c</fullName>
        <description>Comma separated list of Source Codes required to be considered eligible for the Price Rule.</description>
        <inlineHelpText>Comma separated list of Source Codes required to be considered eligible for the Price Rule.</inlineHelpText>
        <label>Required Source Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Required_Subscription_Plans__c</fullName>
        <description>Select the Subscription Plan that must be selected for this rule to apply to the purchase of the item. Leave blank to not constrain rule by Subscription Plan.</description>
        <inlineHelpText>Select the Subscription Plan that must be selected for this rule to apply to the purchase of the item. Leave blank to not constrain rule by Subscription Plan.</inlineHelpText>
        <label>Required Subscription Plans</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Start_Date__c</fullName>
        <description>If a pricing rule is date-driven what date does this rule become an active/available price for the item?</description>
        <inlineHelpText>If a pricing rule is date-driven what date does this rule become an active/available price for the item?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Inclusive_Price__c</fullName>
        <description>SYSTEM * The value in this field defines the price when Show Tax Inclusive Pricing is marked true on the store.</description>
        <inlineHelpText>SYSTEM * The value in this field defines the price when Show Tax Inclusive Pricing is marked true on the store.</inlineHelpText>
        <label>Tax Inclusive Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Price Rule</label>
    <nameField>
        <label>Price Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>